@@ -3,6 +3,7 @@
 * Bugfixes:
   * Quote service name. Closes GH-3
   * Loose mongrel dependency a little bit for compatibility
+  * Service name is mandatory. Closes GH-10
 
 === 0.4.beta3 / 2010-03-07
 
